<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Ciudades" android:background="@color/colorPrimary">

    <TextView
            android:text="@string/texto_bienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvBienvenida" android:layout_margin="16dp"
            android:textColor="@color/colorGrado"/>
    <Button
            android:text="@string/texto_boton_méxico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btMexico"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:textColor="@color/colorCiudad"/>
    <Button
            android:text="@string/texto_boton_España"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btEspaña"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:textColor="@color/colorCiudad"/>
    <Button
            android:text="@string/texto_boton_Toronto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btToronto"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:textColor="@color/colorCiudad"/>
    <Button
            android:text="@string/texto_boton_Okinawa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btOkinawa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:textColor="@color/colorCiudad"/>
</LinearLayout>